--- a/app/bookstore20/angular.json
+++ b/app/bookstore20/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "bookstore20": {
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/semantic-ui-css/semantic.css"
             ],
             "scripts": []
           },
@@ -92,7 +93,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/semantic-ui-css/semantic.css"
+
             ],
             "scripts": []
           }
